updated itrules templates